examples/illtyped/gradingError.gr
-- Should not be typeable:
foo : Int |2| -> Int |4|
foo |x| = |(x + x)|

-- Valid type signatures would be:
-- foo : Int |2| -> Int |1|
-- foo : Int |8| -> Int |4|
